Modifying Welcome area of Intro Section

--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -131,6 +131,7 @@ const LANGUAGES = [
     </div>
     <div class="w-full flex justify-center items-center py-15">
         <div class="flex flex-col justify-start items-center md:items-start w-full md:w-2xl mx-0 md:mx-auto px-4 md:px-0">
+            {/*
             <div class="w-full flex justify-center md:justify-start h-auto md:h-10 items-start flex-row overflow-hidden m-0 p-0">
                 <div class="hidden md:flex w-1 h-full animate-h-full bg-white rounded-full mr-2"></div>
                 <h2 class="text-white animate-none md:animate-translate-x-delay-500 translate-x-0 invisible text-4xl items-center justify-start flex flex-col md:flex-row font-black tracking-wider text-center md:text-left" id="greetings_iam">
@@ -140,10 +141,9 @@ const LANGUAGES = [
                     </span>
                 </h2>
             </div>
-            <div class="flex md:hidden w-1/2 h-0.5 bg-white rounded-full mt-5">
-
-            </div>
-            <p class="text-white/70 text-xl text-center md:text-left my-5 selection:bg-yellow-500 selection:text-black">
+            */}
+            {/* <div class="flex md:hidden w-1/2 h-0.5 bg-white rounded-full mt-5"></div> */}
+            <p class="text-white/70 text-xl text-center md:text-left mt-20 mb-5 selection:bg-yellow-500 selection:text-black">
                 <span class="text-yellow-300 font-extrabold">
                     {locale === "en-GB" ? translate.intro.web_applications.charAt(0).toUpperCase() + translate.intro.web_applications.slice(1) : translate.intro.developer}
                     { (locale === "es-ES" || locale === "ca-ES") && (
