--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -52,13 +52,13 @@ const creador = translate.creator_name;
     </div>
 </Layout>
 
-<script is:inline>
+<!-- <script is:inline>
     document.addEventListener('DOMContentLoaded', function() {
         setTimeout(function() {
             document.getElementById('greetings_iam').classList.remove('invisible');
         }, 500);
     });
-</script>
+</script> -->
 
 <style>
     .about-container-mask {
