Improving general responsive design

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -6,7 +6,7 @@ const { creador, translate, locale } = Astro.props;
     class="pt-(--header-h) w-full flex flex-col justify-center items-center text-center"
 >
     <h1 class="text-4xl text-white mb-4">{translate.nav.about_me}</h1>
-    <p class="max-w-2xl text-white/80 text-lg">
+    <p class="max-w-2xl text-white/80 max-[180px]:text-sm text-lg">
         {translate.temporary_text}
     </p>
 </div>
