--- a/src/pages/[locale]/calculator.astro
+++ b/src/pages/[locale]/calculator.astro
@@ -19,7 +19,7 @@ const angularImage = "https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/
     <head>
         <meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-        <title>Angular en Astro</title>
+        <title>Angular in Astro</title>
         <base href=`/${locale}/calculator/`>
         <link rel="icon" type="image/x-icon" href="/yk_round.ico" />
         <link rel="stylesheet" href="/angular/calculator/styles.css" />
