--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -95,7 +95,7 @@ const navContent = getNavContent(locale);
 
                 <div
                     id="locales-menu"
-                    class="pointer-events-none opacity-0 absolute right-0 top-full flex justify-center items-center transition-all bg-gray-900 rounded-md z-9999"
+                    class="pointer-events-none opacity-0 absolute max-[175px]:-right-2 max-[160px]:-right-4 right-0 top-full flex justify-center items-center transition-all bg-gray-900 rounded-md z-9999"
                     aria-label="Language choice menu"
                 >
                     <ul
