--- a/src/components/TrajectorySection.astro
+++ b/src/components/TrajectorySection.astro
@@ -32,7 +32,7 @@ const EXPERIENCES = [
 <div class="flex w-full flex-col pt-(--header-h)">
     <div class="w-full flex justify-center items-center mb-10">
         <div class="flex w-full flex-col justify-center items-center">
-            <h1 class="text-center text-4xl text-white font-extrabold">
+            <h1 class="text-center max-[235px]:text-2xl text-4xl text-white font-extrabold">
                 {translate.trajectory.title}
             </h1>
             <span class="text-white/80 text-sm mt-2">
@@ -43,7 +43,7 @@ const EXPERIENCES = [
 
     <div class="relative w-full max-w-3xl mx-auto py-10">
         <div
-            class="absolute left-0 ml-2 md:ml-0 md:left-1/2 top-0 translate-x-0 md:-translate-x-1/2 w-0.5 h-full bg-gray-700 rounded-full animate-height-to-full"
+            class="max-[180px]:hidden absolute left-0 ml-2 md:ml-0 md:left-1/2 top-0 translate-x-0 md:-translate-x-1/2 w-0.5 h-full bg-gray-700 rounded-full animate-height-to-full"
             id="timeline-line"
         >
         </div>
@@ -53,13 +53,13 @@ const EXPERIENCES = [
 
                 return (
                     <section
-                        class={`mb-12 flex w-full items-center pl-5 md:pl-0 ${
+                        class={`mb-12 flex w-full items-center max-[180px]:pl-2 pl-5 md:pl-0 ${
                             index % 2 === 0 ? "justify-start" : "justify-start md:justify-end"
                         }`}
                     >
                         <div class="relative w-full md:w-1/2">
                             <div
-                                class={`absolute ${
+                                class={`max-[180px]:hidden absolute ${
                                     index % 2 === 0
                                         ? "-left-4 md:left-auto -translate-x-0.75 md:translate-x-0 top-6 md:top-5 md:-right-2"
                                         : "-left-4 -translate-x-0.75 md:translate-x-0 top-6 md:top-5 md:-left-2"
@@ -67,7 +67,7 @@ const EXPERIENCES = [
                             />
 
                             <div
-                                class={`bg-transparent md:bg-gray-800 rounded-2xl shadow-lg p-5 experience-card opacity-0 w-full md:w-fit
+                                class={`bg-transparent md:bg-gray-800 rounded-2xl shadow-lg max-[180px]:p-0 p-5 experience-card opacity-0 w-full md:w-fit
                                 ${
                                     index % 2 === 0
                                         ? "ml-0 mr-0 md:ml-auto md:mr-8"
@@ -75,10 +75,10 @@ const EXPERIENCES = [
                                 }`}
                             >
                                 <div class="w-full flex flex-col">
-                                    <h3 class="text-xl font-bold text-white">
+                                    <h3 class="text-xl max-[170px]:text-base font-bold text-white">
                                         {role}
                                     </h3>
-                                    <p class="text-blue-400 font-semibold">
+                                    <p class="text-blue-400 max-[170px]:text-[12px] font-semibold">
                                         {company}
                                     </p>
                                     <p class="text-sm text-gray-400">
