--- a/src/pages/[locale]/calculator.astro
+++ b/src/pages/[locale]/calculator.astro
@@ -22,7 +22,7 @@ const angularImage = "https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/
         <title>Angular in Astro</title>
         <base href=`/${locale}/calculator/`>
         <link rel="icon" type="image/x-icon" href="/yk_round.ico" />
-        <link rel="stylesheet" href="/angular/calculator/styles.css" />
+        <link rel="stylesheet" href="/angular/calculator/styles-4VXF3FO3.css" />
     </head>
     <body>
         <header class="fixed bg-transparent inset-0 w-full h-(--header-h) px-4 flex justify-between items-center">
@@ -40,7 +40,7 @@ const angularImage = "https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/
 
         <app-root></app-root>
 
-        <script src="/angular/calculator/main-WHH7OFGL.js" type="module"></script>
+        <script is:inline src="/angular/calculator/main-LUYZYIFE.js" type="module"></script>
         <!-- <script is:inline src="/angular/calculator/main.js" type="module"></script>  -->
     </body>
 </html>
