--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -26,12 +26,12 @@ const PROJECTS = {
     </div>
 </div>
 <div class="flex w-full flex-col px-2 md:px-0">
-    <div class="w-full md:max-w-3xl mx-0 md:mx-auto flex flex-col justify-center items-start my-10 rounded-2xl">
+    <div class="w-full md:max-w-3xl mx-0 md:mx-auto flex flex-col justify-center items-start my-10 rounded-2xl" id="projects-container">
         {
             Object.values(PROJECTS).map((project) => {
                 const { name, url, frameworks } = project;
                 return(
-                    <div class="flex flex-col md:flex-row gap-6 md:gap-0 justify-between items-start group w-full">
+                    <div class="flex flex-col md:flex-row gap-6 md:gap-0 justify-between items-start group w-full opacity-0 project-card">
                         <div class="m-0 p-0 overflow-hidden rounded-2xl border border-gray-800 group-hover:border-gray-700 transition-all">
                             <img 
                                 src={calculator.src} 
@@ -39,7 +39,7 @@ const PROJECTS = {
                                 class="h-full w-auto object-cover transition-transform duration-300 scale-110 group-hover:scale-100" 
                             />
                         </div>
-                        <div class="flex flex-col justify-start items-start md:items-center px-1 md:px-4 w-full md:min-w-[400px] h-full">
+                        <div class="flex flex-col justify-start items-start md:items-center px-1 md:px-4 w-full md:min-w-[400px] h-full opacity-0 project-description">
                             <div class="flex flex-1 flex-col justify-start items-start">
                                 <h3 class="text-yellow-400 text-3xl max-[250px]:text-xl max-[170px]:text-base font-extrabold uppercase">{name}</h3>
                                 <ul class="flex w-full flex-row flex-wrap justify-start items-center my-2 gap-2">
@@ -80,3 +80,21 @@ const PROJECTS = {
         }
     </div>
 </div>
+
+<script is:inline>
+    document.addEventListener('DOMContentLoaded', function() {
+        const $project_cards = document.getElementById('projects-container').querySelectorAll('.project-card');
+        
+        const observer = new IntersectionObserver((entries, observe) => {
+            entries.forEach((entry) => {
+                if(entry.isIntersecting) {
+                    entry.target.classList.add('animate-fade-in-up');
+                    entry.target.querySelector('.project-description').classList.add('animate-fade-in-left');
+                    observe.unobserve(entry.target);
+                }
+            });
+        }, {threshold: 0.1});
+
+        $project_cards.forEach(card => observer.observe(card));
+    });
+</script>
