--- a/src/pages/[locale]/calculator.astro
+++ b/src/pages/[locale]/calculator.astro
@@ -25,13 +25,13 @@ const angularImage = "https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/
         <link rel="stylesheet" href="/angular/calculator/styles-4VXF3FO3.css" />
     </head>
     <body>
-        <header class="fixed bg-transparent inset-0 w-full h-(--header-h) px-4 flex justify-between items-center">
+        <header class="fixed bg-transparent inset-0 w-full h-(--header-h) px-4 flex justify-between items-center z-9999">
             <a href={`/${locale}/`} class="flex justify-center items-center px-4 py-2 text-white hover:bg-gray-900/80 bg-gray-900/60 rounded-xl hover:scale-105 transition-all">
                 <i class="icon-[line-md--arrow-left]" />
             </a>
 
             <div class="flex flex-row gap-4 justify-center items-center px-4 py-2">
-                <span class="text-white/80 text-sm">
+                <span class="text-white/80 text-sm max-[255px]:hidden">
                     Developed in
                 </span>
                 <img src={angularImage} alt="Angular image" class="size-6">
@@ -40,7 +40,7 @@ const angularImage = "https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/
 
         <app-root></app-root>
 
-        <script is:inline src="/angular/calculator/main-22HLZTAV.js" type="module"></script>
+        <script is:inline src="/angular/calculator/main-WINSH77U.js" type="module"></script>
         <!-- <script is:inline src="/angular/calculator/main.js" type="module"></script>  -->
     </body>
 </html>
@@ -53,6 +53,6 @@ const angularImage = "https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/
     header {
         animation: drawBlur2xl 1s ease both;
         animation-timeline: scroll();
-        animation-range: 0 250px;
+        animation-range: 0 50px;
     }
 </style>
