--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -26,7 +26,7 @@ const PROJECTS = {
     </div>
 </div>
 <div class="flex w-full flex-col px-2 md:px-0">
-    <div class="w-full md:max-w-3xl mx-0 md:mx-auto flex flex-col justify-center items-start my-10 rounded-2xl" id="projects-container">
+    <div class="w-full md:max-w-3xl mx-0 md:mx-auto flex flex-col justify-center items-start my-10 rounded-2xl overflow-hidden" id="projects-container">
         {
             Object.values(PROJECTS).map((project) => {
                 const { name, url, frameworks } = project;
