Adding link to my repositories of github

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ const navContent = getNavContent(locale);
     
             {/* SOCIAL MEDIA CONTACT */}
             <div class="flex flex-row flex-wrap gap-2 justify-center md:justify-start w-full md:w-fit md:items-start">
-                <a href="" class="py-3">
+                <a href="https://github.com/yarosprojects?tab=repositories" class="py-3">
                     <i class="icon-[line-md--github] text-xl" />
                 </a>
                 <a href={`mailto:${email}`} class="px-4 py-3 text-sm bg-gray-900 rounded-full w-fit h-fit ml-0 md:ml-4 transition-all hover:brightness-125">
