Modifying project section removeing angular folder

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,7 +7,7 @@ const PROJECTS = {
     calculator: {
       id: 'calculator',
       name: 'Calculadora',
-      url: `/${locale}/calculator/`,
+      url: `https://calculator-yarosprojects.vercel.app`,
       frameworks: {
         angular: {
             id: 'angular-framework',
