--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -1,70 +1,12 @@
 ---
+import FRAMEWORKS from '@consts/frameworks';
+import LANGUAGES from '@consts/languages';
 import { imageConfig } from "astro:assets";
 import avatar from "../../public/img/avatar.png";
 
 const { creador, translate, locale } = Astro.props;
 const cfgs_started_at = 2022;
 
-const FRAMEWORKS = [
-    {
-        name: 'React',
-        animation_delay: '0',
-        img: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg',
-    },
-    {
-        name: 'Angular',
-        animation_delay: '100',
-        img: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg',
-    },
-    {
-        name: 'Laravel',
-        animation_delay: '300',
-        img: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/laravel/laravel-original.svg',
-    },
-    {
-        name: 'Django',
-        animation_delay: '500',
-        img: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/django/django-plain.svg',
-    },
-    {
-        name: 'Astro',
-        animation_delay: '800',
-        img: 'https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/astro/astro-original.svg',
-    }
-];
-
-const LANGUAGES = [
-    {
-        name: 'Html',
-        animation_delay: '0',
-        img: '/img/programming-languages/html5.webp',
-    },
-    {
-        name: 'Css',
-        animation_delay: '100',
-        img: '/img/programming-languages/css.webp',
-    },
-    {
-        name: 'JavaScript',
-        animation_delay: '200',
-        img: '/img/programming-languages/js.webp',
-    },
-    {
-        name: 'Java',
-        animation_delay: '300',
-        img: '/img/programming-languages/java.webp',
-    },
-    {
-        name: 'Python',
-        animation_delay: '400',
-        img: '/img/programming-languages/python.webp',
-    },
-    {
-        name: 'Php',
-        animation_delay: '500',
-        img: '/img/programming-languages/php.webp',
-    }
-];
 ---
 <div
     class="flex justify-start pt-15 md:pt-30 items-center flex-col min-h-screen w-full relative z-10"
@@ -132,7 +74,7 @@ const LANGUAGES = [
         </div>
     </div>
     <div class="w-full flex justify-center items-center py-15">
-        <div class="flex flex-col justify-start items-center md:items-start w-full md:w-2xl mx-0 md:mx-auto px-4 md:px-0">
+        <div class="flex flex-col justify-start items-center md:items-start w-full md:w-3xl mx-0 md:mx-auto px-4 md:px-0">
             {/*
             <div class="w-full flex justify-center md:justify-start h-auto md:h-10 items-start flex-row overflow-hidden m-0 p-0">
                 <div class="hidden md:flex w-1 h-full animate-h-full bg-white rounded-full mr-2"></div>
@@ -162,19 +104,24 @@ const LANGUAGES = [
                 <a href="https://maps.app.goo.gl/7TDSxg5tGKfRuGfc6" target="_blank" class="hover:text-white inline-block backdrop-blur-3xl hover:px-2 hover:scale-105 transition-all mt-1">{translate.cities.psip}</a>, {translate.countries.spain}.
                 <br>
             </p>
-            <p class="text-white/70 max-[195px]:text-base text-xl text-center md:text-left selection:bg-yellow-500 selection:text-black">
+            <p class="text-white/70 max-[195px]:text-base text-xl text-center md:text-left selection:bg-yellow-500 selection:text-black mt-8 md:mb-0 mb-5 md:mt-0">
                 {translate.intro.focused_on} <span class="text-yellow-100">{translate.intro.creation}</span>, <span class="text-yellow-100">{translate.intro.maintenance}</span> {translate.intro.and} <span class="text-yellow-100">{translate.intro.resolution}</span> {translate.intro.of_the} <span class="text-yellow-100">{translate.intro.vulnerability}</span> {translate.intro.of_normal} {translate.intro.of_static_and_dynamic_web_pages} <span class="text-yellow-100">{translate.intro.statics}</span> {translate.intro.and_normal} <span class="text-yellow-100">{translate.intro.dynamics}</span> 
                 {translate.intro.websites}
                 .
             </p>
             <div class="flex flex-col gap-15 md:gap-3 w-full py-13 md:py-7">
                 <div class="flex flex-col w-full gap-7">
-                    <div class="w-full flex justify-center md:justify-start items-center flex-wrap flex-row gap-3">
+                    <div
+                        id="frameworks-container" 
+                        class="relative w-full flex justify-center md:justify-start items-center flex-wrap flex-row gap-3 overflow-hidden md:overflow-auto max-h-17 md:max-h-full transition-all duration-700"
+                    >
                         {
                             FRAMEWORKS.map((framework) => {
                                 const { name, animation_delay, img } = framework;
                                 return (
-                                    <div class={`flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full bg-gray-800 animate-fade-in animate-delay-${animation_delay}`}>
+                                    <div class="flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full bg-gray-800 animate-fade-in"
+                                        style={`animation-delay: ${animation_delay}ms;`}
+                                    >
                                         <img src={img} alt={`Image of ${name}`} class={`size-5 ${name.toLowerCase() === "java" ? '-translate-y-0.75' : ''}`} />
                                         <span>
                                             {name}
@@ -183,27 +130,34 @@ const LANGUAGES = [
                                 )
                             })
                         }
-                        <div class="hidden md:flex flex-row gap-1 mt-auto">
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        </div>
+
+                        <div class="absolute left-0 bottom-0 w-full h-10 bg-linear-to-t from-(--primary-color) to-transparent pointer-events-none opacity-100 transition-opacity" id="frameworks-overlay"></div>
                     </div>
-                    <div class="flex md:hidden flex-row gap-1 w-full justify-center">
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
+                    <div class="w-full flex md:hidden justify-center items-center px-4 py-5">
+                        <button
+                            id="show-frameworks-more"
+                            type="button"
+                            class="px-4 py-2 rounded-full text-black bg-yellow-500 font-extrabold cursor-pointer"
+                            data-showMore={translate.intro.show_more}
+                            data-showLess={translate.intro.show_less}
+                            aria-labe="Boton de mostrar más y mostrar menos los frameworks de programación"
+                        >
+                            {translate.intro.show_more}
+                        </button>
                     </div>
                 </div>
                 <div class="flex flex-col w-full gap-7 pt-7">
-                    <div class="w-full flex justify-center md:justify-start items-center flex-wrap flex-row gap-3">
+                    <div
+                        id="languages-container" 
+                        class="relative w-full flex justify-center md:justify-start items-center flex-wrap flex-row gap-3 overflow-hidden md:overflow-auto max-h-15 md:max-h-full transition-all duration-700"
+                    >
                         {
                             LANGUAGES.map((language) => {
                                 const { name, animation_delay, img } = language;
                                 return  (
-                                    <div class={`flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full bg-gray-800 animate-fade-in animate-delay-${animation_delay}`}>
+                                    <div class="flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full bg-gray-800 animate-fade-in"
+                                        style={`animation-delay: ${animation_delay}ms;`}
+                                    >
                                         <img src={img} alt={`Image of ${name}`} class={`size-5 ${name.toLowerCase() === "java" ? '-translate-y-0.75' : ''}`} />
                                         <span>
                                             {name}
@@ -212,21 +166,78 @@ const LANGUAGES = [
                                 )
                             })
                         }
-                        <div class="hidden md:flex flex-row gap-1 mt-auto">
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                            <div class="w-0.5 h-0.5 mt-auto mb-2 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        </div>
+                        <div class="absolute left-0 bottom-0 w-full h-10 bg-linear-to-t from-(--primary-color) to-transparent pointer-events-none opacity-100 transition-opacity" id="languages-overlay"></div>
                     </div>
-                    <div class="flex md:hidden flex-row gap-1 w-full justify-center">
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
-                        <div class="w-0.5 h-0.5 bg-white/70 rounded-full animate-fade-in animate-delay-900"></div>
+                    <div class="w-full flex md:hidden justify-center items-center px-4 py-5">
+                        <button
+                            id="show-languages-more"
+                            type="button"
+                            class="px-4 py-2 rounded-full text-black bg-yellow-500 font-extrabold cursor-pointer"
+                            data-showMore={translate.intro.show_more}
+                            data-showLess={translate.intro.show_less}
+                            aria-labe="Boton de mostrar más y mostrar menos los lenguajes de programación"
+                        >
+                            {translate.intro.show_more}
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script is:inline>
+    document.addEventListener('DOMContentLoaded', function() {
+        const $showMorLanguagesBtn = document.getElementById('show-languages-more');
+        const $showMorFrameworksBtn = document.getElementById('show-frameworks-more');
+        const $languagesContainer = document.getElementById('languages-container');
+        const $framweworksContainer = document.getElementById('frameworks-container');
+        const $frameworksOverlay = document.getElementById('frameworks-overlay');
+        const $languagesOverlay = document.getElementById('languages-overlay');
+
+        // FRAMEWORKS
+        let frameworksShowed = false;
+        $showMorFrameworksBtn?.addEventListener('click', function() {
+            frameworksShowed = !frameworksShowed
+            
+            if(frameworksShowed) {
+                $frameworksOverlay.classList.remove('opacity-100');
+                $frameworksOverlay.classList.add('opacity-0');
+                $framweworksContainer?.classList.remove('max-h-17');
+                $framweworksContainer?.classList.add('max-h-100');
+                $showMorFrameworksBtn.innerHTML = $showMorFrameworksBtn.getAttribute('data-showLess');
+            } else {
+                $framweworksContainer?.classList.remove('max-h-100');
+                $framweworksContainer?.classList.add('max-h-17');
+                setTimeout(function() {
+                    $frameworksOverlay.classList.remove('opacity-0');
+                    $frameworksOverlay.classList.add('opacity-100');
+                    $showMorFrameworksBtn.innerHTML = $showMorFrameworksBtn.getAttribute('data-showMore');
+                }, 500);
+            }
+        });
+
+
+        // PROGRAMMING LANGUAGES
+        let languagesShowed = false;
+        $showMorLanguagesBtn?.addEventListener('click', function() {
+            languagesShowed = !languagesShowed
+            
+            if(languagesShowed) {
+                $languagesOverlay.classList.remove('opacity-100');
+                $languagesOverlay.classList.add('opacity-0');
+                $languagesContainer?.classList.remove('max-h-15');
+                $languagesContainer?.classList.add('max-h-100');
+                $showMorLanguagesBtn.innerHTML = $showMorLanguagesBtn.getAttribute('data-showLess');
+            } else {
+                $languagesContainer?.classList.remove('max-h-100');
+                $languagesContainer?.classList.add('max-h-15');
+                setTimeout(function() {
+                    $languagesOverlay.classList.remove('opacity-0');
+                    $languagesOverlay.classList.add('opacity-100');
+                    $showMorLanguagesBtn.innerHTML = $showMorLanguagesBtn.getAttribute('data-showMore');
+                }, 500);
+            }
+        });
+    });
+</script>
