Fixing syntax aria-label error

--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -140,7 +140,7 @@ const cfgs_started_at = 2022;
                             class="px-4 py-2 rounded-full text-black bg-yellow-500 font-extrabold cursor-pointer"
                             data-showMore={translate.intro.show_more}
                             data-showLess={translate.intro.show_less}
-                            aria-labe="Boton de mostrar más y mostrar menos los frameworks de programación"
+                            aria-label="Boton de mostrar más y mostrar menos los frameworks de programación"
                         >
                             {translate.intro.show_more}
                         </button>
@@ -175,7 +175,7 @@ const cfgs_started_at = 2022;
                             class="px-4 py-2 rounded-full text-black bg-yellow-500 font-extrabold cursor-pointer"
                             data-showMore={translate.intro.show_more}
                             data-showLess={translate.intro.show_less}
-                            aria-labe="Boton de mostrar más y mostrar menos los lenguajes de programación"
+                            aria-label="Boton de mostrar más y mostrar menos los lenguajes de programación"
                         >
                             {translate.intro.show_more}
                         </button>
